overflow bugfix

--- a/public/theme/css/main.css
+++ b/public/theme/css/main.css
@@ -8834,12 +8834,6 @@ html {
   font-size: .875em;
 }
 
-@media screen and (max-width: 768px) {
-  body {
-    overflow: hidden;
-  }
-}
-
 h1, h2, h3 {
   margin: 0;
 }
@@ -8860,6 +8854,11 @@ a:focus {
   position: relative;
   max-width: 71.25rem;
   margin: 0 auto;
+}
+@media screen and (max-width: 768px) {
+  .main-wrapper {
+    overflow: hidden;
+  }
 }
 
 main {
