--- a/public/theme/sass/_app.scss
+++ b/public/theme/sass/_app.scss
@@ -7,12 +7,6 @@ html {
 	font-size: .875em;
 }
 
-body {
-	@media screen and ($laptop) {
-		overflow: hidden;
-	}
-}
-
 h1, h2, h3 {
 	margin: 0; 
 }
@@ -34,6 +28,11 @@ a {
 	position: relative;
 	max-width: 1140rem / $hfs;
 	margin: 0 auto;
+
+
+	@media screen and ($laptop) {
+		overflow: hidden;
+	}
 }
 
 main {
